--- a/CellTower/CellTower/Creature/creature.plist
+++ b/CellTower/CellTower/Creature/creature.plist
@@ -13,7 +13,7 @@
 		<integer>10</integer>
 		<key>type</key>
 		<integer>0</integer>
-		<key>hidden</key>
+		<key>creatureHidden</key>
 		<false/>
 		<key>slowDown</key>
 		<false/>
@@ -29,7 +29,7 @@
 		<integer>40</integer>
 		<key>type</key>
 		<integer>1</integer>
-		<key>hidden</key>
+		<key>creatureHidden</key>
 		<false/>
 		<key>slowDown</key>
 		<false/>
@@ -45,7 +45,7 @@
 		<integer>15</integer>
 		<key>type</key>
 		<integer>2</integer>
-		<key>hidden</key>
+		<key>creatureHidden</key>
 		<false/>
 		<key>slowDown</key>
 		<false/>
@@ -61,7 +61,7 @@
 		<integer>10</integer>
 		<key>type</key>
 		<integer>3</integer>
-		<key>hidden</key>
+		<key>creatureHidden</key>
 		<false/>
 		<key>slowDown</key>
 		<false/>
@@ -77,7 +77,7 @@
 		<integer>10</integer>
 		<key>type</key>
 		<integer>4</integer>
-		<key>hidden</key>
+		<key>creatureHidden</key>
 		<false/>
 		<key>slowDown</key>
 		<false/>
@@ -93,7 +93,7 @@
 		<integer>20</integer>
 		<key>type</key>
 		<integer>5</integer>
-		<key>hidden</key>
+		<key>creatureHidden</key>
 		<false/>
 		<key>slowDown</key>
 		<false/>
@@ -109,7 +109,7 @@
 		<integer>10</integer>
 		<key>type</key>
 		<integer>6</integer>
-		<key>hidden</key>
+		<key>creatureHidden</key>
 		<false/>
 		<key>slowDown</key>
 		<false/>
@@ -125,7 +125,7 @@
 		<integer>20</integer>
 		<key>type</key>
 		<integer>7</integer>
-		<key>hidden</key>
+		<key>creatureHidden</key>
 		<false/>
 		<key>slowDown</key>
 		<false/>
